Defaut setting and html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,62 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Document</title>
+    <title>Clon de Google</title>
   </head>
   <body>
-    <h1>hello</h1>
+    <header class="header">
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li class="main-nav-link"><a href="#">Gmail</a></li>
+          <li class="main-nav-link"><a href="#">Images</a></li>
+          <li class="main-nav-link">
+            <a href="#"><ion-icon class="nav-icon" name="apps"></ion-icon></a>
+          </li>
+          <li class="main-nav-link"><a href="#" class="btn">Acceder</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="main-section">
+        <div class="main-logo">
+          <img src="" alt="" class="logo-img" />
+        </div>
+        <div class="main-search">
+          <ion-icon class="main-icon" name="search-outline"></ion-icon>
+          <input type="text" />
+          <ion-icon class="main-icon" name="mic"></ion-icon>
+          <ion-icon class="main-icon" name="image"></ion-icon>
+        </div>
+        <div class="main-btns">
+          <div class="btn"><a href="#">Google Search</a></div>
+          <div class="btn"><a href="#">I'm Feeling Lucky</a></div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <p class="footer-location">Mexico</p>
+      <nav class="footer-nav">
+        <ul class="footer-nav-left">
+          <li class="footer-link"><a href="#">About</a></li>
+          <li class="footer-link"><a href="#">Advertising</a></li>
+          <li class="footer-link"><a href="#">Business</a></li>
+          <li class="footer-link"><a href="#">How Search works</a></li>
+        </ul>
+        <ul class="footer-nav-right">
+          <li class="footer-link"><a href="#">Privacy</a></li>
+          <li class="footer-link"><a href="#">Terms</a></li>
+          <li class="footer-link"><a href="#">Settings</a></li>
+        </ul>
+      </nav>
+    </footer>
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
