--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
     <header class="header">
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li class="main-nav-link"><a href="#">Gmail</a></li>
-          <li class="main-nav-link"><a href="#">Images</a></li>
-          <li class="main-nav-link">
-            <a href="#"><ion-icon class="nav-icon" name="apps"></ion-icon></a>
+          <li><a href="#" class="main-nav-link">Gmail</a></li>
+          <li><a href="#" class="main-nav-link">Images</a></li>
+          <li>
+            <a href="#" class="main-nav-link"
+              ><ion-icon class="nav-icon" name="apps"></ion-icon
+            ></a>
           </li>
-          <li class="main-nav-link"><a href="#" class="btn">Acceder</a></li>
+          <li><a href="#" class="btn btn-nav">Acceder</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section class="main-section">
         <div class="main-logo">
-          <img src="" alt="" class="logo-img" />
+          <img src="./img/google.png" alt="Google Logo" class="logo-img" />
         </div>
         <div class="main-search">
           <ion-icon class="main-icon" name="search-outline"></ion-icon>
@@ -40,15 +42,15 @@
       <p class="footer-location">Mexico</p>
       <nav class="footer-nav">
         <ul class="footer-nav-left">
-          <li class="footer-link"><a href="#">About</a></li>
-          <li class="footer-link"><a href="#">Advertising</a></li>
-          <li class="footer-link"><a href="#">Business</a></li>
-          <li class="footer-link"><a href="#">How Search works</a></li>
+          <li><a href="#" class="footer-link">About</a></li>
+          <li><a href="#" class="footer-link">Advertising</a></li>
+          <li><a href="#" class="footer-link">Business</a></li>
+          <li><a href="#" class="footer-link">How Search works</a></li>
         </ul>
         <ul class="footer-nav-right">
-          <li class="footer-link"><a href="#">Privacy</a></li>
-          <li class="footer-link"><a href="#">Terms</a></li>
-          <li class="footer-link"><a href="#">Settings</a></li>
+          <li><a href="#" class="footer-link">Privacy</a></li>
+          <li><a href="#" class="footer-link">Terms</a></li>
+          <li><a href="#" class="footer-link">Settings</a></li>
         </ul>
       </nav>
     </footer>
