css and media queries

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li><a href="#" class="main-nav-link">Gmail</a></li>
-          <li><a href="#" class="main-nav-link">Images</a></li>
+          <li><a href="#" class="main-nav-link">Imagénes</a></li>
           <li>
             <a href="#" class="main-nav-link"
               ><ion-icon class="nav-icon" name="apps"></ion-icon
@@ -29,12 +29,14 @@
         <div class="main-search">
           <ion-icon class="main-icon" name="search-outline"></ion-icon>
           <input type="text" />
-          <ion-icon class="main-icon" name="mic"></ion-icon>
-          <ion-icon class="main-icon" name="image"></ion-icon>
+          <div class="main-icons">
+            <ion-icon class="main-icon" name="mic"></ion-icon>
+            <ion-icon class="main-icon" name="image"></ion-icon>
+          </div>
         </div>
         <div class="main-btns">
-          <div class="btn"><a href="#">Google Search</a></div>
-          <div class="btn"><a href="#">I'm Feeling Lucky</a></div>
+          <a class="btn btn-main" href="#">Buscar con Google</a>
+          <a class="btn btn-main" href="#">Voy a tener suerte</a>
         </div>
       </section>
     </main>
@@ -42,15 +44,15 @@
       <p class="footer-location">Mexico</p>
       <nav class="footer-nav">
         <ul class="footer-nav-left">
-          <li><a href="#" class="footer-link">About</a></li>
-          <li><a href="#" class="footer-link">Advertising</a></li>
-          <li><a href="#" class="footer-link">Business</a></li>
-          <li><a href="#" class="footer-link">How Search works</a></li>
+          <li><a href="#" class="footer-link">Sobre Google</a></li>
+          <li><a href="#" class="footer-link">Publicidad</a></li>
+          <li><a href="#" class="footer-link">Negocios</a></li>
+          <li><a href="#" class="footer-link">Como funciona la busqueda</a></li>
         </ul>
         <ul class="footer-nav-right">
-          <li><a href="#" class="footer-link">Privacy</a></li>
-          <li><a href="#" class="footer-link">Terms</a></li>
-          <li><a href="#" class="footer-link">Settings</a></li>
+          <li><a href="#" class="footer-link">Privacidad</a></li>
+          <li><a href="#" class="footer-link">Condiciones</a></li>
+          <li><a href="#" class="footer-link">Preferencias</a></li>
         </ul>
       </nav>
     </footer>
